# 2D-Laplace-solver

./: CMakeLists.txt  readme.txt
mesh2d/: CMakeLists.txt  karamete_mesh_generator.cpp  karamete_mesh_generator.h  laplace_solver.cpp  laplace_solver.h  mesh2d.c  mesh2d.h  mesh_boundary.h  mesh_generator.h  mesh_vertex.h  potential_field.h  v_mesh.cpp  v_mesh.h  vtriangle.h
mesh2d/tests/: CMakeLists.txt  test_driver_laplace_solver.cpp  test_driver_mesh_generator.cpp  test_laplace_solver.cpp  test_mesh_generator.cpp
